# wal-qt

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  release.yml
cli/: .gitignore  go.mod  go.sum  main.go  oapi-codegen.yaml
cli/cmd/: health.go  kill.go  kill_test.go  load.go  load_test.go  parallax.go  parallax_move.go  query.go  root.go  set.go  set_test.go  settings.go  status.go  wallpaper.go
cli/internal/client/: client.gen.go  gen.go
cli/internal/transport/: unixsocket.go  unixsocket_test.go
docs/: CONTEXT.md  IMAGE_QUALITY_FLAGS.md  LLM_WEB_WALLPAPER_GUIDE.md
docs/superpowers/plans/: 2026-05-07-wal-qt-bootstrap.md  2026-05-08-wal-qt-monitor-selector.md
docs/superpowers/specs/: 2026-05-08-crop-aware-wallpaper-transitions-design.md
openapi/: README.md  wal-qt.yaml
renderer/: .oxfmtrc.json  .oxlintrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
renderer/src/: main.ts  styles.css
renderer/src/renderer/: guards.ts  image.ts  imageQualityFlags.test.ts  imageQualityFlags.ts  loadPipeline.ts  logger.test.ts  logger.ts  parallax.ts  state.ts  types.ts  urlUtils.test.ts  urlUtils.ts  video.ts  videoLoop.test.ts  videoLoop.ts  walBridge.d.ts  webglFxaaShader.test.ts  webglFxaaShader.ts  webglObjectFit.test.ts  webglObjectFit.ts  webglSamplerShaders.test.ts  webglSamplerShaders.ts  webglStandardDerivatives.test.ts  webglStandardDerivatives.ts  webglTextureSizing.test.ts  webglTextureSizing.ts  webglTextureUpscale.test.ts  webglTextureUpscale.ts  webglWorkerProbe.ts
renderer/src/renderer/transition/: effectCrop.test.ts  effectCrop.ts  fadeLayer.test.ts  fadeLayer.ts  intent.ts  orthogonalFade.test.ts  orthogonalFade.ts
scripts/: check-spec-coverage.py  gen-renderer-qrc.sh  install-wal-qt.sh  install-waypaper-hijack.sh  verify-waypaper-engine-api.sh
src/: CMakeLists.txt  _placeholder.cpp  main.cpp  version.h.in
src/app/: app.cpp  app.h  single_instance.cpp  single_instance.h
src/audio/: audio_capture.cpp  audio_capture.h
src/http/: http_parser.cpp  http_parser.h  http_request.h  http_server.cpp  http_server.h
src/util/: mime.cpp  mime.h  socket_path.cpp  socket_path.h
src/wallpaper/: load_request_merge.cpp  load_request_merge.h  monitor_selector.cpp  monitor_selector.h  pending_load.cpp  pending_load.h  target_resolver.cpp  target_resolver.h  wallpaper_bridge.cpp  wallpaper_bridge.h  wallpaper_controller.cpp  wallpaper_controller.h  wallpaper_window.cpp  wallpaper_window.h
src/web/: chromium_env.cpp  chromium_env.h  csp_injector.cpp  csp_injector.h  local_file_scheme_handler.cpp  local_file_scheme_handler.h  network_interceptor.cpp  network_interceptor.h  scheme_handler.cpp  scheme_handler.h
tests/: CMakeLists.txt  test_chromium_env.cpp  test_csp_injector.cpp  test_health_contract.cpp  test_http_parser.cpp  test_load_request_merge.cpp  test_mime.cpp  test_monitor_selector.cpp  test_network_interceptor.cpp  test_pending_load.cpp  test_scheme_handler_paths.cpp  test_single_instance.cpp  test_socket_path.cpp  test_target_resolver.cpp
tests/fixtures/pkg_with_manifest/: waypaper.json
